Fix typo on add customer page

--- a/src/App/src/app/views/add-customer/add-customer.component.html
+++ b/src/App/src/app/views/add-customer/add-customer.component.html
@@ -49,7 +49,7 @@
 
     <div>
       <label>
-        Division
+        State/Province
       </label>
       <select [(ngModel)]="stateChoice" id="state" name="state">
         <option selected="true" disabled="disabled" hidden></option>
