--- a/src/App/src/app/app.component.html
+++ b/src/App/src/app/app.component.html
@@ -14,6 +14,9 @@
     <button mat-button class="menu-button">
       <mat-icon class="icon-display" routerLink="/search">search</mat-icon>
     </button>
+    <button mat-button class="menu-button">
+      <mat-icon class="icon-display" routerLink="/reports">assessment</mat-icon>
+    </button>
   </mat-sidenav>
 
   <mat-sidenav-content>
