Add view for new menu items

--- a/src/App/src/app/app.component.html
+++ b/src/App/src/app/app.component.html
@@ -9,13 +9,13 @@
         <mat-icon class="icon-display" routerLink="/menuItem">restaurant_menu</mat-icon>
     </button>
     <button mat-button class="menu-button">
-      <mat-icon class="icon-display" routerLink="/manageMenu">edit</mat-icon>
+      <mat-icon class="icon-display" routerLink="/menuedit">edit</mat-icon>
     </button>
     <button mat-button class="menu-button">
       <mat-icon class="icon-display" routerLink="/search">search</mat-icon>
     </button>
     <button mat-button class="menu-button">
-      <mat-icon class="icon-display" routerLink="/reports">assessment</mat-icon>
+      <mat-icon class="icon-display" routerLink="/report">assessment</mat-icon>
     </button>
   </mat-sidenav>
 
