--- a/src/App/src/app/views/menu-edit/menu-edit.component.html
+++ b/src/App/src/app/views/menu-edit/menu-edit.component.html
@@ -1,1 +1,59 @@
-<p>menu-edit works!</p>
+<!--TODO fix mystery div preventing this from stretching-->
+  <mat-toolbar color="primary">
+  <span>Menu Management</span>
+  <span class="example-spacer"></span>
+  <button mat-raised-button color="secondary" (click)="openAddEditFormDialog()">Add Item</button>
+</mat-toolbar>
+<div class="main-body">
+  <!-- The filter section -->
+  <mat-form-field >
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="i.e pepperoni" #input>
+  </mat-form-field>
+
+
+    <table mat-table [dataSource]="dataSource" matSort >
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+      <ng-container matColumnDef="menuItem_title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
+        <td mat-cell *matCellDef="let row"> {{row.menuItem_title}}</td>
+      </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <td mat-cell *matCellDef="let row"> {{row.description}}</td>
+      </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let row"> {{row.price}}</td>
+      </ng-container>
+      <ng-container matColumnDef="last_update">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Updated </th>
+        <td mat-cell *matCellDef="let row"> {{row.last_update | date}}</td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+        <td mat-cell *matCellDef="let row">
+            <span (click)="openEditForm(row)" class="action-icon" style="margin-right: 5px;">
+              <mat-icon color="primary">edit</mat-icon>
+            </span>
+          <span (click)="deleteMenuItem(row.id)" class="action-icon">
+              <mat-icon color="warn">delete</mat-icon>
+            </span>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- This row will be shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of items"></mat-paginator>
+  </div>
+
