--- a/src/App/src/app/views/menu-edit-detail/menu-edit-detail.component.html
+++ b/src/App/src/app/views/menu-edit-detail/menu-edit-detail.component.html
@@ -1,1 +1,28 @@
-<p>menu-edit-detail works!</p>
+<div mat-dialog-title>
+  <h1>{{data ? 'Edit': 'Add'}} Menu Item Form</h1>
+</div>
+<form [formGroup]="menuForm" (ngSubmit)="onSubmit()">
+  <div mat-dialog-content class="content">
+      <mat-form-field appearance="outline">
+        <mat-label>Item name:</mat-label>
+        <input matInput type="text" placeholder="Item name" formControlName="menuItem_title">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Description:</mat-label>
+        <input matInput placeholder="Description" formControlName="description">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Price:</mat-label>
+        <input matInput type="number" placeholder="Price" formControlName="price">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Image URL:</mat-label>
+        <input matInput placeholder="Link to Image" formControlName="image_URL">
+      </mat-form-field>
+  </div>
+  <div mat-dialog-actions class="action-btns">
+    <button style="margin: 10px;" mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Save'}}</button>
+    <button mat-raised-button type="button" color="warn" [mat-dialog-close]="false">Cancel</button>
+  </div>
+</form>
