--- a/src/App/src/app/views/menu-edit/menu-edit.component.html
+++ b/src/App/src/app/views/menu-edit/menu-edit.component.html
@@ -1,4 +1,3 @@
-<!--TODO fix mystery div preventing this from stretching-->
   <mat-toolbar color="primary">
   <span>Menu Management</span>
   <span class="example-spacer"></span>
@@ -54,6 +53,6 @@
       </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of items"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of items"></mat-paginator>
   </div>
 
