--- a/src/App/src/app/views/report/report.component.html
+++ b/src/App/src/app/views/report/report.component.html
@@ -1,1 +1,27 @@
-<p>report works!</p>
+
+    <table mat-table [dataSource]="dataSource" matSort >
+        <ng-container matColumnDef="count">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchase Count </th>
+            <td mat-cell *matCellDef="let row"> {{row.purchaseCount}} </td>
+        </ng-container>
+        <ng-container matColumnDef="menuItem_title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
+            <td mat-cell *matCellDef="let row"> {{row.menuItem_title}}</td>
+        </ng-container>
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+            <td mat-cell *matCellDef="let row"> {{row.price}}</td>
+        </ng-container>
+        <ng-container matColumnDef="created_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Purchased </th>
+            <td mat-cell *matCellDef="let row"> {{row.created_date | date}}</td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of items"></mat-paginator>
+
+
