--- a/src/App/src/app/views/report/report.component.html
+++ b/src/App/src/app/views/report/report.component.html
@@ -1,27 +1,46 @@
+<mat-toolbar color="primary">
+    <span>Items added in the last 7 days</span>
+    <span class="example-spacer"></span>
+
+</mat-toolbar>
+<div class="main-body">
+
+
 
     <table mat-table [dataSource]="dataSource" matSort >
-        <ng-container matColumnDef="count">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchase Count </th>
-            <td mat-cell *matCellDef="let row"> {{row.purchaseCount}} </td>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
         <ng-container matColumnDef="menuItem_title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
             <td mat-cell *matCellDef="let row"> {{row.menuItem_title}}</td>
         </ng-container>
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let row"> {{row.description}}</td>
+        </ng-container>
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
             <td mat-cell *matCellDef="let row"> {{row.price}}</td>
         </ng-container>
-        <ng-container matColumnDef="created_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Purchased </th>
-            <td mat-cell *matCellDef="let row"> {{row.created_date | date}}</td>
+        <ng-container matColumnDef="last_update">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Updated </th>
+            <td mat-cell *matCellDef="let row"> {{row.last_update | date}}</td>
         </ng-container>
-
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <td mat-cell *matCellDef="let row">
+            </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- This row will be shown when there is no matching data. -->
+
     </table>
 
     <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of items"></mat-paginator>
-
+</div>
 
